?:
    Updated dmidecode facts fixing ticket #60

    Added AIX support for some facts

    Add lsbmajdistrelease fact for CentOS and Red Hat

    Updated Red Hat spec file for new version 
    The 'facter' executable now has an option (-p|--puppet) for loading the
    Puppet libraries, which gives it access to Puppet's facts.

    Added autoloading to Facter with a default of not loading all facts,
    which results in a significant speedup when only one fact is sought.
    Facts are autoloaded in either a single file named after the fact or
    in any file in a directory named after the fact.

    Significantly refactored Facter's internals, including creating tests
    for all internal classes.

    A netmask fact has been added closing ticket #46.  It only returns the 
    netmask of the primary interface (in the same behaviour as the ipaddress 
    and macaddress facts).

    Facts to return multiple interfaces on a host have also been updated.  
    If you have multiple interfaces on Linux, *BSD, or Solaris/SunOS you will 
    now get facts for each interface's IP address, MAC address and netmask.  
    The facts will be structured like:
      ipaddress_int = 10.0.0.x
      macaddress_int = xx:xx:xx:xx
      netmask_int = 255.255.255.0

    Facter now identifies Ubuntu hosts and their releases using the 
    operatingsystem and operatingsystemrelease facts.

    The Debian operatingsystemrelease fact now correctly returns the current 
    Debian release.

    Fixed ticket #48 - ioperatingsystem and operatingsystemrelease for CentOS

    Fixed ticket #44 and allowed support for Xen multiple interfaces and aliased
    interfaces.  Supports both Linux and *BSD.

    Added interfaces fact to add as index for ip/MAC address facts

    Added Mandrake support for operatingsystem fact - closed ticket #47

    Fixed ticket #45

    Added netmask.rb closing ticket #46    

1.3.8:
    Fixed Rdoc::usage bug on CentOS 5 - closed Puppet #753 and Facter #40
